# rolland

./: .gitignore  .readthedocs.yaml  .ruff.toml  Compare_Different_Tracks.py  Constant_Moving_Force.py  First_Simulation.py  Moving_Force.py  README.md  Structural_Disorder.py  example.py  nordborg_data.csv  nordborg_data_sharp.csv  nordborg_result.csv  pyproject.toml
.github/workflows/: ruff.yml  tests.yml
database/: db_rail.py  db_rail_roughn.py  db_roughn.py  db_sleeper.py  db_wheel.py  db_wheel_prof.py  db_wheel_roughn.py
database/rail/: UIC60_cords_pts  db_rail.py
demo/: anal_method.py
docs/: requirements.txt
docs/.github/workflows/: documentation.yml
docs/source/: beforeyoustart.rst  components.rst  conf.py  doc.rst  index.rst  postprocessing.rst  start.rst
docs/source/_static/: custom.css
docs/source/analyticalmethods/: analyticalmethods.rst
docs/source/buildtrack/: arrangement.rst  buildtrack.rst  components.rst  track.rst
rolland/: __init__.py  abstract_traits.py  arrangement.py  boundary.py  components.py  deflection.py  discretization.py  excitation.py  grid.py  postprocessing.py  testing.py  track.py
rolland/database/: __init__.py  db_roughn.py  db_wheel.py
rolland/methods/: __init__.py  analytical.py
src/: __init__.py  arrangement.py  components.py  track.py  track_layout.py
src/methods/: analytical.py
tests/: test_analytical_methods.py  test_components.py  test_fdm_stampka.py  test_track.py
tests/components/: test_ballast.py  test_components.py  test_pad.py  test_rail.py  test_sleeper.py  test_wheel.py
tests/data/: data_analytical_methods.csv  data_fdm_stampka.csv
z_example/: analy_method.py
(+44 files in other folders)
