[project]
name = "rolland"
version = "0.1"
dependencies = [
    "numpy",
    "scipy>=1.1.0",
    "traitlets>=5.0",
    "traittypes",
    "ruff",
    "pytest",
    "matplotlib",
]

[tool.hatch.envs.hatch-static-analysis]
config-path = [".ruff.toml"]
dependencies = [
    "numpy",
    "scipy>=1.1.0",
    "traitlets>=5.0",
    "traittypes",
    "ruff",
    "matplotlib",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
  "/rolland",
]

[tool.hatch.build.targets.wheel]
packages = ["rolland"]